ConcurrentMessageListenerMockTests cleanup
* `Arrays.asList` to `List.of` in `ConcurrentMessageListenerContainerMockTests`
* Other minor cleanup